--- a/ecosun/index.html
+++ b/ecosun/index.html
@@ -18,7 +18,7 @@
     <script src="./assets/js/plugins.js"></script>
 
     <script src="./assets/js/gsap.min.js"></script>
-    <script src="./assets/js/ScrollSmoother.min.js"></script>
+    <!-- <script src="./assets/js/ScrollSmoother.min.js"></script> -->
     <script src="./assets/js/ScrollTrigger.min.js"></script>
     <script src="./assets/js/smoother-script.js"></script>
 
